<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="age_input_hint">Age</string>
    <string name="gender_text">Gender</string>
    <string name="male_gender_button_label">Male</string>
    <string name="female_gender_button_label">Female</string>
    <string name="height_input_hint">Height (cm)</string>
    <string name="weight_input_hint">Weight (kg)</string>
    <string name="calculate_button_text">calculate</string>
    <string name="clear_button_text">clear</string>
    <string name="result_text">Your BMI is %.2f</string>
</resources>